external-crates/move/crates/move-compiler/tests/move_check/parser/function_acquires_bad_name.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/function_acquires_bad_name.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_acquires_bad_name.move:3:22
  │
3 │     fun f() acquires {
  │                      ^
  │                      │
  │                      Unexpected '{'
  │                      Expected a resource struct name

